--- a/users-folders/shaked/History.txt
+++ b/users-folders/shaked/History.txt
@@ -1598,3 +1598,103 @@ s Master Chief DZ4282 Grey Stainless-Steel Analog Quartz Watch",  = 140.7 = Free
 s Watch DZ1658",  = 69.99 = Free = http://www.ebay.com/itm/DIESEL-Black-Dial-Camo-Leather-Mens-Watch-DZ1658-/181719013005 = http://thumbs2.ebaystatic.com/m/mKotykD4hXVdFAJh-DASlag/140.jpg
 DIESEL "Double Down" Leather Stainless Steel Chrono Men\ = 89.75 = Free = http://www.ebay.com/itm/DIESEL-Double-Down-Leather-Stainless-Steel-Chrono-Mens-Watch-NEW-DZ4331-225-/162082802794 = http://thumbs3.ebaystatic.com/m/mX39fw6OI-cc-tLKFVD0y9w/140.jpg
 Limited Edition! DIESEL watch DZMC0001 MISTER CARTOON 618/3800 = 300.0 = 20.0 = http://www.ebay.com/itm/Limited-Edition-DIESEL-watch-DZMC0001-MISTER-CARTOON-618-3800-/272230648272 = http://thumbs1.ebaystatic.com/m/m5ut0aPwiCAI99GBzLcH0YQ/140.jpg
+s Classic AR1846 Brown Leather Quartz Watch",  = 94.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Mens-Classic-AR1846-Brown-Leather-Quartz-Watch-/131547936212 = http://thumbs1.ebaystatic.com/m/maHd9k2f5MMKCUJi4Io0t6w/140.jpg
+Emporio Armani Wrist Watch for Men AR4629 Leather Strap with Armani Box Sale = 275.0 = Free = http://www.ebay.com/itm/Emporio-Armani-Wrist-Watch-Men-AR4629-Leather-Strap-Armani-Box-Sale-/321949380134 = http://thumbs3.ebaystatic.com/m/m7p1y7llxKbZVcyPnL45wXA/140.jpg
+Giorgio Armani Watch and Box = 9.99 = 22.39 = http://www.ebay.com/itm/Giorgio-Armani-Watch-and-Box-/142003504127 = http://thumbs4.ebaystatic.com/m/m1K2FCMnHPICqrP96umoPBw/140.jpg
+s Wriist Watch Armani Black on Black",  = 225.0 = 225.0 = http://www.ebay.com/itm/Mens-Wriist-Watch-Armani-Black-Black-/201594579899 = http://thumbs4.ebaystatic.com/m/mTMg--tKUBzPJx-fsmvhkWw/140.jpg
+s Watch AR1732",  = 109.95 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Watch-Black-Leather-Analog-Quartz-Mens-Watch-AR1732-/191841755576 = http://thumbs1.ebaystatic.com/m/mgJ89bY1jDx134eigZ3gFGA/140.jpg
+s AX1387 Black Stainless-Steel Quartz Watch",  = 118.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX1387-Black-Stainless-Steel-Quartz-Watch-/141927555667 = http://thumbs4.ebaystatic.com/m/m5eW0lbpP16YFpGYncz0IAw/140.jpg
+s Watch AR5988",  = 149.95 = Free = http://www.ebay.com/itm/Emporio-Armani-Sportivo-Watch-Black-Silver-Quartz-Analog-Mens-Watch-AR5988-/172076303234 = http://thumbs3.ebaystatic.com/m/m7d8-Ko_ghKWxZK3xYnFg4g/140.jpg
+LADIES CERAMIC ARMANI WATCH = 99.99 = 17.64 = http://www.ebay.com/itm/LADIES-CERAMIC-ARMANI-WATCH-/182145634332 = http://thumbs1.ebaystatic.com/m/mQYQfnDvgw6KEm3nhT7s5Lg/140.jpg
+Armani Sportivo Chronograph Black Dial Black Leather Strap Mens Watch AR2461 = 196.99 = Free = http://www.ebay.com/itm/Armani-Sportivo-Chronograph-Black-Dial-Black-Leather-Strap-Mens-Watch-AR2461-/151387336766 = http://thumbs3.ebaystatic.com/m/mLBqbeqvxK7jhdc2sOXLfUg/140.jpg
+EMPORIO ARMANI STAINLESS STEEL BLACK CHRONOGRAPH MEN WATCH AR2461 = 119.99 = 14.61 = http://www.ebay.com/itm/EMPORIO-ARMANI-STAINLESS-STEEL-BLACK-CHRONOGRAPH-MEN-WATCH-AR2461-/141987619373 = http://thumbs2.ebaystatic.com/m/m4A7DB_vl-V5nF-0W7sxDUA/140.jpg
+Armani exchange watch = 32.0 = 32.0 = http://www.ebay.com/itm/Armani-exchange-watch-/131828381255 = http://thumbs4.ebaystatic.com/m/muoELXw-seUu3PWFhVUvmZg/140.jpg
+s Camouflage Emporio Armani Classic Chronograph Watch AR1815",  = 245.0 = Free = http://www.ebay.com/itm/Mens-Camouflage-Emporio-Armani-Classic-Chronograph-Watch-AR1815-/131817128286 = http://thumbs3.ebaystatic.com/m/mY_N7uqfQLjPqzjQ3CTQf4Q/140.jpg
+*NEW* EMPORIO ARMANI AR1721 MENS TWO TONE CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 120.0 = 24.86 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR1721-MENS-TWO-TONE-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/141906305534 = http://thumbs3.ebaystatic.com/m/m_EYFAihwgVfy1i9_1DFIQw/140.jpg
+s Watch, Brown Leather Strap,  Chronograph,  AX1505",  = 99.0 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-Watch-Brown-Leather-Strap-Chronograph-AX1505-/272256198078 = http://thumbs3.ebaystatic.com/m/mdgH20JBMTdgTDw3XNW-LZQ/140.jpg
+s Watch AR2447",  = 149.95 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Watch-Black-Silver-Quartz-Analog-Mens-Watch-AR2447-/191788776271 = http://thumbs4.ebaystatic.com/m/m2nfHrNxwlKY7fRfPCCWfXg/140.jpg
+S ROSE GOLD CHRONOGRAPH DIAL WATCH",  = 162.1 = Free = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR2452-MENS-ROSE-GOLD-CHRONOGRAPH-DIAL-WATCH-/272255122004 = http://thumbs1.ebaystatic.com/m/mdMk7cVlnTNfGFbm5XS25qw/140.jpg
+s Renato AR2480 Brown Leather Quartz Watch",  = 115.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Mens-Renato-AR2480-Brown-Leather-Quartz-Watch-/301971024105 = http://thumbs2.ebaystatic.com/m/m2yz_EopsUzQvgrv8u33Wsg/140.jpg
+Emporio Armani Classic Stainless Steel Mens Watch AR1811 = 178.66 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Stainless-Steel-Mens-Watch-AR1811-/191803569536 = http://thumbs1.ebaystatic.com/m/mH_GjyX6AwFVks1w8WYJf-Q/140.jpg
+s Watch AR5858",  = 149.95 = Free = http://www.ebay.com/itm/Emporio-Armani-Sportivo-Watch-Black-Silver-Quartz-Analog-Mens-Watch-AR5858-/182080004538 = http://thumbs3.ebaystatic.com/m/mKLV9iOt6O7NmzH2OYiWeTA/140.jpg
+s Black Emporio Armani Ceramica Chronograph Watch AR1451",  = 249.0 = Free = http://www.ebay.com/itm/Mens-Black-Emporio-Armani-Ceramica-Chronograph-Watch-AR1451-/131774733976 = http://thumbs1.ebaystatic.com/m/mFbdYknJXZJYiUjKN7z0HzQ/140.jpg
+s AX1802  = 116.0 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX1802-Active-Chronograph-Blue-Silicone-Watch-/201434591566 = http://thumbs3.ebaystatic.com/m/mKfVrrO8ymj0eWYRnx5mjGw/140.jpg
+New Emporio Armani Mens Chronograph Stainless Steel Watch *AR2434 = 49.7 = Free = http://www.ebay.com/itm/New-Emporio-Armani-Mens-Chronograph-Stainless-Steel-Watch-AR2434-/152108112802 = http://thumbs3.ebaystatic.com/m/mWlBunBFBFHfdgF-5lqJuyw/140.jpg
+s AX2129 Black Leather Quartz Watch",  = 82.5 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2129-Black-Leather-Quartz-Watch-/141715048018 = http://thumbs3.ebaystatic.com/m/mEvpitNwU3umzfYh6yLbebg/140.jpg
+Emporio Armani Watch AR1605 Gold Stainless Steel with Leather Strap = 110.0 = 10.0 = http://www.ebay.com/itm/Emporio-Armani-Watch-AR1605-Gold-Stainless-Steel-Leather-Strap-/222135785679 = http://thumbs4.ebaystatic.com/m/mAJArUI4l49XkcNgdd3uJlw/140.jpg
+s Watch AR0398 (NEW)",  = 179.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Mens-Watch-AR0398-NEW-/112007664142 = http://thumbs3.ebaystatic.com/m/mx1y6ngFn1-4RnVExozzIrg/140.jpg
+s ARMANI EXCHANGE AX2207 Black Leather Rose Gold Steel A/X WATCH",  = 119.9 = Free = http://www.ebay.com/itm/new-box-mens-ARMANI-EXCHANGE-AX2207-Black-Leather-Rose-Gold-Steel-A-X-WATCH-/322124599767 = http://thumbs4.ebaystatic.com/m/mSkjfmXw-XK3cjwKKbiqpUA/140.jpg
+Emporio Armani Classic AR2448 Wrist Watch for Men - 2 YEAR WARRANTY = 111.0 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-AR2448-Wrist-Watch-Men-2-YEAR-WARRANTY-/262454396419 = http://thumbs4.ebaystatic.com/m/mxEUDVWrVljRta0ZMZm6DGA/140.jpg
+New Armani Exchange AX1508 Street Chronograph Black Dial Black Leather Men Watch = 229.99 = 229.99 = http://www.ebay.com/itm/New-Armani-Exchange-AX1508-Street-Chronograph-Black-Dial-Black-Leather-Men-Watch-/111842777197 = http://thumbs2.ebaystatic.com/m/mnbfkIwn-xxZRj7W7jyxrLg/140.jpg
+Armani Exchange Stainless Steel Chronograph Mens Watch AX2092 = 99.0 = Free = http://www.ebay.com/itm/Armani-Exchange-Stainless-Steel-Chronograph-Mens-Watch-AX2092-/331865654845 = http://thumbs2.ebaystatic.com/m/mrVcZP3JnmKKQsA4OYOymtg/140.jpg
+(a) MENS BLACK CHRONOGRAPH WATCH LEATHER EMPORIO ARMANI  AR5914          J16918 = 39.99 = 39.99 = http://www.ebay.com/itm/a-MENS-BLACK-CHRONOGRAPH-WATCH-LEATHER-EMPORIO-ARMANI-AR5914-J16918-/222131207098 = http://thumbs3.ebaystatic.com/m/mZGWAe-bVczB0IOCKiSW5iQ/140.jpg
+s AX2093 Black Stainless-Steel Quartz Watch",  = 117.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2093-Black-Stainless-Steel-Quartz-Watch-/131544919194 = http://thumbs3.ebaystatic.com/m/mdDT4OUzk7TMl5ykVwuUowQ/140.jpg
+Emporio Armani Classic Chronograph Black Dial Black Leather Mens Watch AR1737 = 141.89 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Chronograph-Black-Dial-Black-Leather-Mens-Watch-AR1737-/181530211108 = http://thumbs1.ebaystatic.com/m/mUCrgic0wq1qJNd22gpaS4Q/140.jpg
+Brand New Original Emporio Armani AR4642 Wrist Watch for Men luxury = 150.0 = Free = http://www.ebay.com/itm/Brand-New-Original-Emporio-Armani-AR4642-Wrist-Watch-Men-luxury-/272255357532 = http://thumbs1.ebaystatic.com/m/m06hcxjI7ef0TQsqykUlm1A/140.jpg
+s",  = 104.99 = Free = http://www.ebay.com/itm/Brand-New-Emporio-Armani-Watch-AR5858-Model-Sport-Chronograph-Mens-/201591974241 = http://thumbs2.ebaystatic.com/m/m2AJIWtQSzJXi6RySvZxdCA/140.jpg
+s WATCH",  = 127.9 = Free = http://www.ebay.com/itm/new-box-ARMANI-EXCHANGE-AX2094-Black-Ion-Plated-Steel-A-X-mens-WATCH-/391466687519 = http://thumbs4.ebaystatic.com/m/mn1WnfZUxgky1lHwBbpLoQA/140.jpg
+NIB Emporio Armani Meccanico Automatic Black Dial &  Leather Mens Watch AR4656 = 249.99 = Free = http://www.ebay.com/itm/NIB-Emporio-Armani-Meccanico-Automatic-Black-Dial-Leather-Mens-Watch-AR4656-/151827057683 = http://thumbs4.ebaystatic.com/m/mTPGn7eADY9-gNrHoqk0fmg/140.jpg
+s Black Emporio Armani Classic Leather Band Watch AR1732",  = 129.99 = Free = http://www.ebay.com/itm/Mens-Black-Emporio-Armani-Classic-Leather-Band-Watch-AR1732-/301971024406 = http://thumbs3.ebaystatic.com/m/mlRRFBZBrZF-vuDF90rOWGg/140.jpg
+s Watch AR2432",  = 129.95 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Watch-Silver-Black-Quartz-Analog-Mens-Watch-AR2432-/191841755523 = http://thumbs4.ebaystatic.com/m/msoe7a4NoS3R96mQUtiovbw/140.jpg
+s AX2092 Chronograph Crystal Stainless steel Watch",  = 98.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2092-Chronograph-Crystal-Stainless-steel-Watch-/221844213332 = http://thumbs1.ebaystatic.com/m/mdU-z1Nk6rSbV_07t0YNTlQ/140.jpg
+Emporio Armani Sportivo Chronograph Blue Dial Blue Rubber Mens Watch AR6068 = 212.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Sportivo-Chronograph-Blue-Dial-Blue-Rubber-Mens-Watch-AR6068-/381496146283 = http://thumbs4.ebaystatic.com/m/m_nny_aGtwbaODWiLekYgGw/140.jpg
+S WATCH",  = 85.95 = 9.99 = http://www.ebay.com/itm/BRAND-NEW-ARMANI-EXCHANGE-AX2160-BLACK-DUAL-DIAL-SILVER-STEEL-TONE-MENS-WATCH-/222102271985 = http://thumbs2.ebaystatic.com/m/mLCX9LGNkpHPaMJS_8ThdUQ/140.jpg
+New Emporio Armani Mens Chronograph Stainless Steel Watch AR2434 = 49.6 = Free = http://www.ebay.com/itm/New-Emporio-Armani-Mens-Chronograph-Stainless-Steel-Watch-AR2434-/112011072193 = http://thumbs2.ebaystatic.com/m/mIGJW5WBZf1gwxuuQAxbaSQ/140.jpg
+s Watch NEW",  = 138.97 = Free = http://www.ebay.com/itm/USA-SELLER-AR5860-Emporio-Armani-EA-Stainless-Steel-Italian-Mens-Watch-NEW-/371639818936 = http://thumbs1.ebaystatic.com/m/mv8d8jTFs7tFsU0iww1xI4A/140.jpg
+s Armani Watch AR1451 Black Ceramic & Matte",  = 140.0 = 21.94 = http://www.ebay.com/itm/Brand-New-Mens-Armani-Watch-AR1451-Black-Ceramic-Matte-/131801975706 = http://thumbs3.ebaystatic.com/m/mzV1GVdBM88Vvec9xcKRFlg/140.jpg
+Emporio Armani Womens Watch. = 14.99 = 22.46 = http://www.ebay.com/itm/Emporio-Armani-Womens-Watch-/191880422112 = http://thumbs1.ebaystatic.com/m/mvf3QOEE32deCjYJZaugIIg/140.jpg
+New EMPORIO ARMANI Mens Grey Chronograph Leather Watch AR0635 = 117.99 = 21.94 = http://www.ebay.com/itm/New-EMPORIO-ARMANI-Mens-Grey-Chronograph-Leather-Watch-AR0635-/181943353440 = http://thumbs1.ebaystatic.com/m/mTwlpIQ7uX2GGKRoKpUEt_Q/140.jpg
+Armani women watch USED = 130.0 = 26.32 = http://www.ebay.com/itm/Armani-women-watch-USED-/191866938733 = http://thumbs2.ebaystatic.com/m/mDVSEnUiR-mf1GIYgfpfOXw/140.jpg
+s Armani Exchange ATLC Black LeatherStrap Watch AX1372",  = 179.99 = Free = http://www.ebay.com/itm/Mens-Armani-Exchange-ATLC-Black-LeatherStrap-Watch-AX1372-/121947822617 = http://thumbs2.ebaystatic.com/m/mXZnPvcENos8W8F5r1xJB5w/140.jpg
+S STAINLESS STEEL CHRONOGRAPH LEATHER WATCH, AR1633 Nwt",  = 139.99 = Free = http://www.ebay.com/itm/EMPORIO-ARMANI-MENS-STAINLESS-STEEL-CHRONOGRAPH-LEATHER-WATCH-AR1633-Nwt-/252382853447 = http://thumbs4.ebaystatic.com/m/m3X8pY5XXCXCdFb05t95-dw/140.jpg
+S GOLD CHRONOGRAPH DIAL WATCH",  = 161.1 = Free = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR5857-MENS-GOLD-CHRONOGRAPH-DIAL-WATCH-/282044722346 = http://thumbs3.ebaystatic.com/m/mcLEHMnJ40_TE4b-tBzlShg/140.jpg
+Emporio Armani Classic Chronograph Blue Dial Leather Strap Mens Watch AR2473 = 194.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Classic-Chronograph-Blue-Dial-Leather-Strap-Mens-Watch-AR2473-/381248128914 = http://thumbs3.ebaystatic.com/m/mZqNL9io6hA-L0xoCWeViYQ/140.jpg
+Armani Exchange Chronograph Black Dial  Black PVD Stainless Steel Mens Watch = 139.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Chronograph-Black-Dial-Black-PVD-Stainless-Steel-Mens-Watch-/151639307266 = http://thumbs3.ebaystatic.com/m/myYqYsLaigZjpOkgiP39iBg/140.jpg
+s Rose Gold/Silver Stainless Chronograph Watch $445",  = 250.75 = Free = http://www.ebay.com/itm/Emporio-Armani-AR1721-Mens-Rose-Gold-Silver-Stainless-Chronograph-Watch-445-/131805423664 = http://thumbs1.ebaystatic.com/m/mQpCdSvTOORBqXP7V1SPfYQ/140.jpg
+Authentic Emporio Armani AR2449 Men Stainless Steel Gold Silver Classic Watch = 188.99 = Free = http://www.ebay.com/itm/Authentic-Emporio-Armani-AR2449-Men-Stainless-Steel-Gold-Silver-Classic-Watch-/231857496660 = http://thumbs1.ebaystatic.com/m/mCn3Pko474WbP0WOfdeoijA/140.jpg
+EMPORIO ARMANI LADIES  CLASSIC STAINLESS  WATCH, ,AR1620 NIB, = 121.99 = Free = http://www.ebay.com/itm/EMPORIO-ARMANI-LADIES-CLASSIC-STAINLESS-WATCH-AR1620-NIB-/381650158770 = http://thumbs3.ebaystatic.com/m/mAC6r8QEzCqQC1deknHTHUA/140.jpg
+S SPORTIVO SILVER BLACK LEATHER BAND WATCH $195 NWT",  = 100.0 = 9.95 = http://www.ebay.com/itm/EMPORIO-ARMANI-AR6015-MENS-SPORTIVO-SILVER-BLACK-LEATHER-BAND-WATCH-195-NWT-/331868706676 = http://thumbs1.ebaystatic.com/m/muzx77FauNt_LBwXpD7AoQA/140.jpg
+S STAINLESS STEEL CHRONOGRAPH DIAL WATCH",  = 164.99 = Free = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR2454-MENS-STAINLESS-STEEL-CHRONOGRAPH-DIAL-WATCH-/282045536507 = http://thumbs4.ebaystatic.com/m/mtOIoNzZfHJUArJVio8jzOg/140.jpg
+AUTHENTIC ARMANI EXCHANGE LADIES WATCH AX4021 = 100.0 = 3.0 = http://www.ebay.com/itm/AUTHENTIC-ARMANI-EXCHANGE-LADIES-WATCH-AX4021-/141982371113 = http://thumbs2.ebaystatic.com/m/moUHuS-Qckeu_QBB3CYdM9w/140.jpg
+s AX1214 Silver Stainless-Steel Quartz Watch",  = 114.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX1214-Silver-Stainless-Steel-Quartz-Watch-/131422450637 = http://thumbs2.ebaystatic.com/m/mGpN7YGU33atoVwvwWup7pg/140.jpg
+BRAND NEW EMPORIO ARMANI AR4656 MECCANICO AUTOMATIC SILVER & BLACK LEATHER WATCH = 253.99 = Free = http://www.ebay.com/itm/BRAND-NEW-EMPORIO-ARMANI-AR4656-MECCANICO-AUTOMATIC-SILVER-BLACK-LEATHER-WATCH-/221902990823 = http://thumbs4.ebaystatic.com/m/mGmdkJe7Lg71kJe_17nRudA/140.jpg
+Armani Exchange AX1277 Black Metal Bracelet Mens Watch = 39.99 = 10.0 = http://www.ebay.com/itm/Armani-Exchange-AX1277-Black-Metal-Bracelet-Mens-Watch-/262458429590 = http://thumbs3.ebaystatic.com/m/mR2V39Fby9Gqc8E5DDDU-fQ/140.jpg
+Emporio Armani X-Large Stainless Steel Brown Leather Men\u2019s Watch RUNS #5857 = 49.99 = Free = http://www.ebay.com/itm/Emporio-Armani-X-Large-Stainless-Steel-Brown-Leather-Men-s-Watch-RUNS-5857-/401128677512 = http://thumbs1.ebaystatic.com/m/mLT1BqQCGU1LWY2iMM413IQ/140.jpg
+s Watch - NEW",  = 134.53 = Free = http://www.ebay.com/itm/EA-AR2434-Emporio-Armani-USA-SELLER-Stainless-Steel-Mens-Watch-NEW-/121998079602 = http://thumbs3.ebaystatic.com/m/mD4Z0ZLG0jzEIlR8CiZDK1g/140.jpg
+s WATCH Rose",  = 149.9 = Free = http://www.ebay.com/itm/new-box-ARMANI-EXCHANGE-AX1603-Gunmetal-Steel-Bracelet-A-X-mens-WATCH-Rose-/322122701367 = http://thumbs4.ebaystatic.com/m/mL15EYWlQ4CwKUmAhsbEUwQ/140.jpg
+Armani AX Exchange Whitman Black Dial Black Leather Mens Watch AX2101 = 70.29 = Free = http://www.ebay.com/itm/Armani-AX-Exchange-Whitman-Black-Dial-Black-Leather-Mens-Watch-AX2101-/380957138604 = http://thumbs1.ebaystatic.com/m/mDX3NrQnHF9b--yoy6HBUrg/140.jpg
+Armani Exhange AX1261 Brown Leather Band Watch Men = 38.99 = 38.99 = http://www.ebay.com/itm/Armani-Exhange-AX1261-Brown-Leather-Band-Watch-Men-/272258198041 = http://thumbs2.ebaystatic.com/m/manwkWhzKpQve9kEtqHkxMQ/140.jpg
+NEW EMPORIO ARMANI ROSE GOLD STAINLESS STEEL  LADIES WATCH AR7362 = 119.99 = 14.61 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-ROSE-GOLD-STAINLESS-STEEL-LADIES-WATCH-AR7362-/141988813700 = http://thumbs1.ebaystatic.com/m/mbIXatphU0UQywLlyunNtHw/140.jpg
+NEW EMPORIO ARMANI AR5860 MENS STEEL CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 115.0 = 17.55 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR5860-MENS-STEEL-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/272083941464 = http://thumbs1.ebaystatic.com/m/mUiHTaEQgjYQxAuJWIw-0cA/140.jpg
+s White and Rose Gold Chronograph Watch",  = 126.95 = Free = http://www.ebay.com/itm/New-Luxury-Emporio-Armani-AR5919-Mens-White-and-Rose-Gold-Chronograph-Watch-/182090138767 = http://thumbs4.ebaystatic.com/m/mb6PwgXPyrEKb1Wu4fYF4vw/140.jpg
+S WATCH",  = 197.99 = Free = http://www.ebay.com/itm/BRAND-NEW-EMPORIO-ARMANI-AR1809-CLASSIC-ROSE-GOLD-CRACKED-LEATHER-MENS-WATCH-/321986024574 = http://thumbs3.ebaystatic.com/m/mJ8Ck8yYJzq421ZsLmmICxw/140.jpg
+Emporio Armani Green Teal Plastic Bangle Bracelet Women Watch AR7369 = 106.24 = Free = http://www.ebay.com/itm/Emporio-Armani-Green-Teal-Plastic-Bangle-Bracelet-Women-Watch-AR7369-/381653987768 = http://thumbs1.ebaystatic.com/m/m0-iUNh2dPKWY2wKLGYZMWw/140.jpg
+Mens Watch Emporio Armani AR5860 Blue Dial Original Package = 115.99 = Free = http://www.ebay.com/itm/Mens-Watch-Emporio-Armani-AR5860-Blue-Dial-Original-Package-/331865629179 = http://thumbs4.ebaystatic.com/m/mUKtJSXd6lz9yqR0X0vMu9g/140.jpg
+MEN CLASSIC EMPORIO ARMANI GIANNI ROSE GOLD STEEL WATCH AR1721 NEW = 199.0 = 17.64 = http://www.ebay.com/itm/MEN-CLASSIC-EMPORIO-ARMANI-GIANNI-ROSE-GOLD-STEEL-WATCH-AR1721-NEW-/252387659802 = http://thumbs3.ebaystatic.com/m/mfw-GhxbDiKByX2UBVuLG6Q/140.jpg
+S BLACK CHRONOGRAPH DIAL WATCH",  = 137.0 = Free = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR5889-MENS-BLACK-CHRONOGRAPH-DIAL-WATCH-/282049890679 = http://thumbs4.ebaystatic.com/m/mPUk5pmuR-ZKhM8rR9Nbw4Q/140.jpg
+s Watch",  = 199.99 = 17.64 = http://www.ebay.com/itm/Emporio-Armani-Gold-Silver-Mens-Watch-/322116615301 = http://thumbs2.ebaystatic.com/m/m6IMmGViXc3IOVksdiAZiBQ/140.jpg
+s White Ceramic  Chronograph Watch AR1472 New In Box",  = 139.99 = 139.99 = http://www.ebay.com/itm/Emporio-Armani-Womens-White-Ceramic-Chronograph-Watch-AR1472-New-Box-/361572173854 = http://thumbs3.ebaystatic.com/m/mMYkQ7QNX_-A5kLbsgXGpOA/140.jpg
+Ladies Armani Exchange Watch AX 4021 = 15.0 = 15.0 = http://www.ebay.com/itm/Ladies-Armani-Exchange-Watch-AX-4021-/252401070563 = http://thumbs4.ebaystatic.com/m/mBni1nDgi0N78ZEzQxWgAtw/140.jpg
+Armani Exchange Chronograph Black Dial Black Ion-plated Mens Watch AX1387 = 160.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Chronograph-Black-Dial-Black-Ion-plated-Mens-Watch-AX1387-/181791133753 = http://thumbs2.ebaystatic.com/m/mgwkpHpGd5el01n2k45k5tA/140.jpg
+Emporio Armani Chronograph White Dial Brown Leather Mens Watch AR1846 = 132.99 = Free = http://www.ebay.com/itm/Emporio-Armani-Chronograph-White-Dial-Brown-Leather-Mens-Watch-AR1846-/151523615210 = http://thumbs3.ebaystatic.com/m/m-bLZmjGLwBCHSJwrnXsukw/140.jpg
+s",  = 101.1 = Free = http://www.ebay.com/itm/Brand-New-Emporio-Armani-Watch-AR5905-Model-Sport-Chronograph-Mens-/201591978125 = http://thumbs2.ebaystatic.com/m/mcUyqx0zIh6KLQj0L-d-HJw/140.jpg
+NEW EMPORIO ARMANI MEN AMBER DIAL BROWN LEATHER WATCH AR0645 + ORIGINAL BOX = 109.99 = Free = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-MEN-AMBER-DIAL-BROWN-LEATHER-WATCH-AR0645-ORIGINAL-BOX-/322094983144 = http://thumbs1.ebaystatic.com/m/m7g460iDdP6bpd4eVRJgBEw/140.jpg
+s Gold & Silver Chronograph Watch AR0396",  = 124.99 = 17.64 = http://www.ebay.com/itm/New-EMPORIO-ARMANI-Mens-Gold-Silver-Chronograph-Watch-AR0396-/111998249607 = http://thumbs4.ebaystatic.com/m/mxwZ9FGi3UfvCzAxLobSDiQ/140.jpg
+New EMPORIO ARMANI Mens Croco Leather Brown Chronograph Watch AR1634 = 104.99 = 21.94 = http://www.ebay.com/itm/New-EMPORIO-ARMANI-Mens-Croco-Leather-Brown-Chronograph-Watch-AR1634-/191746943433 = http://thumbs2.ebaystatic.com/m/m0WVIUz7-anTbW6ktB5etIA/140.jpg
+s AX4322  = 104.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Womens-AX4322-Classic-Rose-Tone-Stainless-steel-Watch-/221809371660 = http://thumbs1.ebaystatic.com/m/mRLNGv6vqL7ecWU8DvbqGNQ/140.jpg
+S WATCH",  = 65.0 = 65.0 = http://www.ebay.com/itm/EMPORIO-ARMANI-AR1648-CLASSIC-BLUE-DIAL-CHRONOGRAPH-STEEL-MENS-WATCH-/282051859701 = http://thumbs2.ebaystatic.com/m/m_PGvuXF0ukRW_Zp0odZ49Q/140.jpg
+s AX2058 Silver Stainless-Steel Quartz Watch",  = 108.16 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2058-Silver-Stainless-Steel-Quartz-Watch-/131422450519 = http://thumbs4.ebaystatic.com/m/m0EWY9g3O0KU5_TBnwsDJ9w/140.jpg
+NEW EMPORIO ARMANI AR5858 BLACK MENS CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 109.0 = 17.55 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR5858-BLACK-MENS-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/291660105327 = http://thumbs4.ebaystatic.com/m/mVW64BmONfPfBcaFMD3x6tw/140.jpg
+Armani Exchange Chronograph Silver Dial Stainless Steel Ladies Watch AX4324 = 107.99 = Free = http://www.ebay.com/itm/Armani-Exchange-Chronograph-Silver-Dial-Stainless-Steel-Ladies-Watch-AX4324-/381469302703 = http://thumbs4.ebaystatic.com/m/mmyhgfqjtdBrMEZhXIXODAg/140.jpg
+s WATCH Chronograph",  = 124.9 = Free = http://www.ebay.com/itm/new-box-ARMANI-EXCHANGE-AX2086-Gunmetal-Gray-Steel-A-X-mens-WATCH-Chronograph-/331865686615 = http://thumbs4.ebaystatic.com/m/m-_3pnuV3o0lVaJ6a5i20jg/140.jpg
+Emporio Armani  Chronograph Black Dial Matte Black Leather Mens Watch AR1828 = 131.49 = Free = http://www.ebay.com/itm/Emporio-Armani-Chronograph-Black-Dial-Matte-Black-Leather-Mens-Watch-AR1828-/181673616380 = http://thumbs1.ebaystatic.com/m/m2hz-U0Aum3Ff8mhaoDCtIQ/140.jpg
+NEW EMPORIO ARMANI AR5905 ROSE GOLD MENS CHRONOGRAPH WATCH - 2 YEAR WARRANTY = 109.0 = 17.55 = http://www.ebay.com/itm/NEW-EMPORIO-ARMANI-AR5905-ROSE-GOLD-MENS-CHRONOGRAPH-WATCH-2-YEAR-WARRANTY-/271874246038 = http://thumbs3.ebaystatic.com/m/mKIgPeWzIEz5DOXtC2Do0hA/140.jpg
+s Rose Gold Chronograph Watch AR5954",  = 241.13 = Free = http://www.ebay.com/itm/Emporio-Armani-Mens-Rose-Gold-Chronograph-Watch-AR5954-/162088197231 = http://thumbs4.ebaystatic.com/m/mgu0G4-g_jiY89JXLIhAkaw/140.jpg
+s AX2159 Black Stainless steel Watch",  = 103.0 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX2159-Black-Stainless-steel-Watch-/201434591669 = http://thumbs2.ebaystatic.com/m/mW2Wlf_c5eCNwYvQVPFL1aQ/140.jpg
+New EMPORIO ARMANI Mens Black Stainless Steel Chronograph Watch AR5983 = 127.99 = 21.94 = http://www.ebay.com/itm/New-EMPORIO-ARMANI-Mens-Black-Stainless-Steel-Chronograph-Watch-AR5983-/182119351013 = http://thumbs2.ebaystatic.com/m/mm9uHL4MKK8KxJYGp5Nv_iQ/140.jpg
+Emporio Armani Leather Mens Watch AR1948 = 180.0 = Free = http://www.ebay.com/itm/Emporio-Armani-Leather-Mens-Watch-AR1948-/172174541506 = http://thumbs3.ebaystatic.com/m/m-QNTTgWfJ5A9_Opb1eSCzw/140.jpg
+EMPORIO ARMANI MID SIZE CLASSIC STAINLESS  WATCH, ,AR1711 NIB = 104.99 = Free = http://www.ebay.com/itm/EMPORIO-ARMANI-MID-SIZE-CLASSIC-STAINLESS-WATCH-AR1711-NIB-/311620817857 = http://thumbs2.ebaystatic.com/m/mUj_0fyrBXr8NF_zy553ZZw/140.jpg
+s Slim Black Leather Strap Watch AR2006",  = 0.99 = 60.0 = http://www.ebay.com/itm/Emporio-Armani-Mens-Slim-Black-Leather-Strap-Watch-AR2006-/162082224025 = http://thumbs2.ebaystatic.com/m/m6cl08c287L3fs2tIlMR5CQ/140.jpg
+s AX1609  = 93.0 = Free = http://www.ebay.com/itm/Armani-Exchange-Mens-AX1609-Active-Chronograph-Blue-Leather-Watch-/191697519449 = http://thumbs2.ebaystatic.com/m/mDuhSNmE2eQiT7VHGRCbN0A/140.jpg
+Armani Navy Chronograph Blue Dial Two-tone Stainless Steel Mens Watch AR6088 = 236.99 = Free = http://www.ebay.com/itm/Armani-Navy-Chronograph-Blue-Dial-Two-tone-Stainless-Steel-Mens-Watch-AR6088-/181972272697 = http://thumbs2.ebaystatic.com/m/mQtwAkNLGuiUJCf8zRzKzHw/140.jpg
+s Watch Ret 245.00",  = 123.99 = Free = http://www.ebay.com/itm/EMPORIO-ARMANI-AR0680-Stainless-Steel-Silver-Black-Dial-Mens-Watch-Ret-245-00-/252391262509 = http://thumbs2.ebaystatic.com/m/me9iqgP3DJNhc4XZR1T_X0Q/140.jpg
